fix: fix adding promoCode to clipboard on ios

--- a/src/pages/basket/basket.scss
+++ b/src/pages/basket/basket.scss
@@ -38,7 +38,7 @@
 
 .basket__discount-code-input {
   padding: 0.2rem 0.4rem;
-  border: 0.5px solid var(--dark-brown-text-color);
+  border: 1px solid var(--dark-brown-text-color);
   height: 40px;
   border-radius: 5px;
   &::placeholder {
